docs: adjust docs again